force-app/main/default/objects/Assests__c/Assests__c.object-meta.xml
<CustomObject>
    <label>Asset</label>
    <nameField>
        <label>Assests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>