force-app/main/default/objects/Assests__c/fields/Asset_Info__c.field-meta.xml
<CustomField>
    <fullName>Asset_Info__c</fullName>
    <description>Additional Information on Asset</description>
    <label>Asset Info</label>
    <type>TextArea</type>
</CustomField>