force-app/main/default/objects/Assests__c/fields/CPR_Number__c.field-meta.xml
<CustomField>
    <fullName>CPR_Number__c</fullName>
    <label>CPR Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>