force-app/main/default/objects/Assests__c/fields/Is_Personal__c.field-meta.xml
<CustomField>
    <fullName>Is_Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for personal assets</description>
    <label>Is Personal</label>
    <type>Checkbox</type>
</CustomField>