force-app/main/default/objects/Assests__c/fields/Is_Personal_P__c.field-meta.xml
<CustomField>
    <fullName>Is_Personal_P__c</fullName>
    <label>Is Personal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Ja</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Nej</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>