force-app/main/default/objects/Assests__c/fields/Journal_Id__c.field-meta.xml
<CustomField>
    <fullName>Journal_Id__c</fullName>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipName>Assest</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>