force-app/main/default/objects/Assests__c/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipName>Assest</relationshipName>
    <type>Lookup</type>
</CustomField>